--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^6.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.5.2",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.14"
   },
